[package]
name = "chunkdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

safe_network = {version ="^0.52.0"}
xor_name = "3.1.0"
bytes = "1.1.0"
tokio = {version ="1.15.0", features = ["fs"]}
color-eyre = "0.5"
glob = "0.3.0"
